crates/elenchus-parser/tests/snapshots/errors__premise_implication_missing_then.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        PREMISE wings_need_bone:\n            WHEN Creature.A has flying\n        CHECK Creature.A\n        \"#)"
---
Syntax Error at line 4, col 9: expected THEN to complete the WHEN ... THEN implication
  |         CHECK Creature.A
  |         ^--- here
